--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -2,7 +2,7 @@
   "App": {
     "title": "React Multilingual support"
   },
-  "componentA": {
+  "ComponentA": {
     "title": "Component A",
     "description": "text"
   }
